--- a/actions.html
+++ b/actions.html
@@ -75,7 +75,7 @@
                     </ul>
 
                     <div class="ms-4">
-                        <a href="login.html" class="btn custom-btn custom-border-btn smoothscroll">Espace pro</a>
+                        <a href="login.html" class="btn custom-btn custom-border-btn ">Espace pro</a>
                     </div>
                 </div>
             </div>
@@ -230,7 +230,7 @@
                 <div class="row">
                     <div class="col-md-12">
                         <p class="text-white-on-black">"Contribuons à la préservation de nos océans en faveur d'une pêche durable !  Nous sommes vivement intéressés par vos idées d'amélioration."</p>
-                        <a href="contact.html" class="btn custom-btn smoothscroll mt-3">Contact</a>
+                        <a href="contact.html" class="btn custom-btn  mt-3">Contact</a>
                     </div>
                 </div><!-- /.row -->
             </div>
@@ -453,7 +453,7 @@
               <strong class="d-inline me-2">Téléhone:</strong> +596 596 52 60 02
             </p>
             <p class="mb-1">
-              <strong class="d-inline me-2">Mobile:</strong> +596 696 52 60 02
+              <strong class="d-inline me-2">Mobile:</strong> +596 696 52 08 62
             </p>
             <p>
               <strong class="d-inline me-2">Site Web:</strong>
