--- a/activites.html
+++ b/activites.html
@@ -106,9 +106,7 @@
             </ul>
 
             <div class="ms-4">
-              <a
-                href="login.html"
-                class="btn custom-btn custom-border-btn smoothscroll"
+              <a href="login.html" class="btn custom-btn custom-border-btn"
                 >Espace pro</a
               >
             </div>
@@ -304,9 +302,7 @@
                 pêche durable ! Nous sommes vivement intéressés par vos idées
                 d'amélioration."
               </p>
-              <a href="contact.html" class="btn custom-btn smoothscroll mt-3"
-                >Contact</a
-              >
+              <a href="contact.html" class="btn custom-btn mt-3">Contact</a>
             </div>
           </div>
           <!-- /.row -->
@@ -591,7 +587,7 @@
               <strong class="d-inline me-2">Téléhone:</strong> +596 596 52 60 02
             </p>
             <p class="mb-1">
-              <strong class="d-inline me-2">Mobile:</strong> +596 696 52 60 02
+              <strong class="d-inline me-2">Mobile:</strong> +596 696 52 08 62
             </p>
             <p>
               <strong class="d-inline me-2">Site Web:</strong>
