--- a/actualites.html
+++ b/actualites.html
@@ -104,9 +104,7 @@
             </ul>
 
             <div class="ms-4">
-              <a
-                href="login.html"
-                class="btn custom-btn custom-border-btn smoothscroll"
+              <a href="login.html" class="btn custom-btn custom-border-btn"
                 >Espace pro</a
               >
             </div>
@@ -253,8 +251,12 @@
                 <div class="custom-block-info">
                   <h5 class="mb-2">Segmentation de la pêche</h5>
 
-                  <p class="mb-0">La pêche professionnelle est une activité de « cueillette » d’une ressource vivante renouvelable.
-                    Une bonne gestion des ressources halieutiques garantit la durabilité de la ressource et donc de l’activité.</p>
+                  <p class="mb-0">
+                    La pêche professionnelle est une activité de « cueillette »
+                    d’une ressource vivante renouvelable. Une bonne gestion des
+                    ressources halieutiques garantit la durabilité de la
+                    ressource et donc de l’activité.
+                  </p>
 
                   <div
                     class="custom-block-bottom d-flex justify-content-between mt-3"
@@ -296,7 +298,11 @@
                 <div class="custom-block-info">
                   <h5 class="mb-2">Nettoyage des fonds marins</h5>
 
-                  <p class="mb-0">Le nettoyage des fonds marins en collaboration avec les marins pêcheurs professionnels est une initiative importante pour la préservation de l'environnement marin.</p>
+                  <p class="mb-0">
+                    Le nettoyage des fonds marins en collaboration avec les
+                    marins pêcheurs professionnels est une initiative importante
+                    pour la préservation de l'environnement marin.
+                  </p>
 
                   <div
                     class="custom-block-bottom d-flex justify-content-between mt-3"
@@ -338,7 +344,13 @@
                 <div class="custom-block-info">
                   <h5 class="mb-2">Messe des marins</h5>
 
-                  <p class="mb-0">Beaucoup de marins pêcheurs estiment que leur métier comporte des risques considérables. La messe est aussi une occasion de prier pour la sécurité en mer, de demander la protection des saints patrons des marins, et d'honorer ceux qui ont perdu la vie en mer.</p>
+                  <p class="mb-0">
+                    Beaucoup de marins pêcheurs estiment que leur métier
+                    comporte des risques considérables. La messe est aussi une
+                    occasion de prier pour la sécurité en mer, de demander la
+                    protection des saints patrons des marins, et d'honorer ceux
+                    qui ont perdu la vie en mer.
+                  </p>
 
                   <div
                     class="custom-block-bottom d-flex justify-content-between mt-3"
@@ -374,9 +386,7 @@
                 pêche durable ! Nous sommes vivement intéressés par vos idées
                 d'amélioration."
               </p>
-              <a href="contact.html" class="btn custom-btn smoothscroll mt-3"
-                >Contact</a
-              >
+              <a href="contact.html" class="btn custom-btn mt-3">Contact</a>
             </div>
           </div>
           <!-- /.row -->
@@ -406,11 +416,12 @@
                     fonction de divers facteurs :
 
                     <br />- Les techniques de pêche utilisées, telles que les
-                    filets, les sennes, la pêche au DCP dit dispositif de concentration de poissons etc. <br />La durée des
-                    sorties en mer, allant d'une demi-journée à plusieurs
-                    jours. <br />- Le navire, qui peut être petite ou
-                    de grande taille définissant la catégorie de navigation. <br />- Les zones de pêche, de nos côtes
-                    à des eaux lointaines. <br />- Les différentes
+                    filets, les sennes, la pêche au DCP dit dispositif de
+                    concentration de poissons etc. <br />La durée des sorties en
+                    mer, allant d'une demi-journée à plusieurs jours. <br />- Le
+                    navire, qui peut être petite ou de grande taille définissant
+                    la catégorie de navigation. <br />- Les zones de pêche, de
+                    nos côtes à des eaux lointaines. <br />- Les différentes
                     fonctions à bord, influençant les responsabilités et les
                     tâches. <br /><br />En ce qui concerne la rémunération, la
                     plupart des marins pêcheurs sont payés en fonction de la
@@ -432,16 +443,18 @@
                   </h5>
                   <p class="mb-0">
                     Le métier de marin pêcheur comprend plusieurs fonctions
-                    essentielles à bord d'un navire. <br>Les membres d'équipage clés
-                    sont le patron ou capitaine, le matelot et le mécanicien :
+                    essentielles à bord d'un navire. <br />Les membres
+                    d'équipage clés sont le patron ou capitaine, le matelot et
+                    le mécanicien :
 
-                    <br />- Le matelot participe à toutes les étapes de la pêche,
-                    de la préparation des moteurs au traitement des captures. Il
-                    s'occupe également de l'entretien du navire.
+                    <br />- Le matelot participe à toutes les étapes de la
+                    pêche, de la préparation des moteurs au traitement des
+                    captures. Il s'occupe également de l'entretien du navire.
 
                     <br />- Le patron ou capitaine gère les campagnes de pêche,
                     veille à la sécurité de l'équipage, supervise l'entretien du
-                    navire et gère le traitement et la conservation des captures.
+                    navire et gère le traitement et la conservation des
+                    captures.
 
                     <br />- Le mécanicien est responsable de la maintenance des
                     moteurs et des équipements de pêche.
@@ -476,7 +489,15 @@
                   <h5 class="mb-2">
                     <a href="#"> Formations / Recyclages </a>
                   </h5>
-                  <p class="mb-0">Les recyclages et les formations sont essentiels pour améliorer la sécurité en mer, promouvoir la durabilité de la pêche, et maintenir l'industrie de la pêche à jour avec les dernières pratiques et technologies. Ils contribuent également à l'amélioration des conditions de travail des marins et à la préservation des ressources marines pour les générations futures.</p>
+                  <p class="mb-0">
+                    Les recyclages et les formations sont essentiels pour
+                    améliorer la sécurité en mer, promouvoir la durabilité de la
+                    pêche, et maintenir l'industrie de la pêche à jour avec les
+                    dernières pratiques et technologies. Ils contribuent
+                    également à l'amélioration des conditions de travail des
+                    marins et à la préservation des ressources marines pour les
+                    générations futures.
+                  </p>
                 </div>
               </div>
             </div>
@@ -504,7 +525,15 @@
                   <h5 class="mb-2">
                     <a href="#"> Experiences / Anecdotes </a>
                   </h5>
-                  <p class="mb-0">Les expériences et anecdotes des marins pêcheurs professionnels contribuent à la richesse de la culture maritime. Ces récits offrent un aperçu de la vie en mer, de ses défis et de ses récompenses sans oublier les rituels avant de prendre la mer, tout en préservant la mémoire de cette industrie essentielle pour les communautés côtières du monde entier.</p>
+                  <p class="mb-0">
+                    Les expériences et anecdotes des marins pêcheurs
+                    professionnels contribuent à la richesse de la culture
+                    maritime. Ces récits offrent un aperçu de la vie en mer, de
+                    ses défis et de ses récompenses sans oublier les rituels
+                    avant de prendre la mer, tout en préservant la mémoire de
+                    cette industrie essentielle pour les communautés côtières du
+                    monde entier.
+                  </p>
                 </div>
               </div>
             </div>
@@ -640,7 +669,7 @@
               <strong class="d-inline me-2">Téléhone:</strong> +596 596 52 60 02
             </p>
             <p class="mb-1">
-              <strong class="d-inline me-2">Mobile:</strong> +596 696 52 60 02
+              <strong class="d-inline me-2">Mobile:</strong> +596 696 52 08 62
             </p>
             <p>
               <strong class="d-inline me-2">Site Web:</strong>
