--- a/contact.html
+++ b/contact.html
@@ -104,9 +104,7 @@
             </ul>
 
             <div class="ms-4">
-              <a
-                href="login.html"
-                class="btn custom-btn custom-border-btn smoothscroll"
+              <a href="login.html" class="btn custom-btn custom-border-btn"
                 >Espace pro</a
               >
             </div>
@@ -207,9 +205,7 @@
                 "Votre contribution peut être le point de départ d'un changement
                 positif"
               </p>
-              <a href="contact.html" class="btn custom-btn smoothscroll mt-3"
-                >Contact</a
-              >
+              <a href="contact.html" class="btn custom-btn mt-3">Contact</a>
             </div>
           </div>
           <!-- /.row -->
@@ -242,7 +238,7 @@
                         placeholder="nom"
                         required=""
                       />
-                      <label for="floatingInput">Votre nom</label>
+                      <label for="full-name">Votre nom</label>
                     </div>
                   </div>
 
@@ -257,7 +253,7 @@
                         placeholder="Email"
                         required=""
                       />
-                      <label for="floatingInput">Votre Email</label>
+                      <label for="email">Votre Email</label>
                     </div>
                   </div>
 
@@ -292,7 +288,7 @@
                         name="message"
                         placeholder="message"
                       ></textarea>
-                      <label for="floatingTextarea">Votre message</label>
+                      <label for="message">Votre message</label>
                     </div>
                   </div>
 
@@ -453,7 +449,7 @@
               <strong class="d-inline me-2">Téléhone:</strong> +596 596 52 60 02
             </p>
             <p class="mb-1">
-              <strong class="d-inline me-2">Mobile:</strong> +596 696 52 60 02
+              <strong class="d-inline me-2">Mobile:</strong> +596 696 52 08 62
             </p>
             <p>
               <strong class="d-inline me-2">Site Web:</strong>
