--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
             <div class="ms-4">
               <a
                 href="new_page.html"
-                class="btn custom-btn custom-border-btn smoothscroll"
+                class="btn custom-btn custom-border-btn "
                 >Espace pro</a
               >
             </div>
@@ -285,7 +285,7 @@
                 pouvons faire une différence. Vos suggestions d'améliorations
                 nous interessent."
               </p>
-              <a href="contact.html" class="btn custom-btn smoothscroll mt-3"
+              <a href="contact.html" class="btn custom-btn  mt-3"
                 >Contact</a
               >
             </div>
@@ -605,7 +605,7 @@
               <strong class="d-inline me-2">Téléhone:</strong> +596 596 52 60 02
             </p>
             <p class="mb-1">
-              <strong class="d-inline me-2">Mobile:</strong> +596 696 52 60 02
+              <strong class="d-inline me-2">Mobile:</strong> +596 696 52 08 62
             </p>
             <p>
               <strong class="d-inline me-2">Site Web:</strong>
