--- a/logout.html
+++ b/logout.html
@@ -11,7 +11,7 @@
     <!-- Balise pour le favicon -->
     <link rel="icon" type="image/png" href="assets/images/logos/amp.jpg" />
 
-    <title>AMP - login</title>
+    <title>AMP - logout</title>
 
     <!-- Fichiers CSS -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -39,35 +39,8 @@
                   class="logoAmp"
               /></a>
 
-              <h2 class="loginTitle-text">Connexion</h2>
-              <p class="user-email">Connectez-vous sur notre plateforme</p>
-            </div>
-
-            <div class="page email-page">
-              <div class="input-box">
-                <input type="text" class="email" autofocus required />
-                <label>Entrez votre email</label>
-              </div>
-
-              <div class="input-box">
-                <input type="password" class="password" id="passLog" required />
-                <img
-                  src="assets/images/logos/redEye.png"
-                  id="eyepassLog"
-                  onClick="changer('passLog')"
-                />
-                <label for="password">Mot de passe</label>
-              </div>
-
-              <div class="log-link">
-                <a href="reset.html">Mot de passe oublié</a>
-              </div>
-
-              <div class="btn-box">
-                <a href="new.html">Creer un compte</a>
-                <button class="btn-next">Se connecter</button>
-              </div>
-            </div>
+              <h2 class="loginTitle-text">Vous avez été déconnecté(e)</h2>
+            </div>           
           </div>
         </form>
       </div>
