--- a/privacy.html
+++ b/privacy.html
@@ -70,7 +70,7 @@
                   </ul>
 
                   <div class="ms-4">
-                      <a href="login.html" class="btn custom-btn custom-border-btn smoothscroll">Espace pro</a>
+                      <a href="login.html" class="btn custom-btn custom-border-btn ">Espace pro</a>
                   </div>
               </div>
           </div>
@@ -320,7 +320,7 @@
       Si vous avez des questions, des préoccupations ou des demandes concernant cette Politique de Confidentialité, veuillez nous contacter :
     </p><br>
     <p>
-      <a href="contact.html" class="btn custom-btn smoothscroll mt-1">Nous contacter</a>
+      <a href="contact.html" class="btn custom-btn  mt-1">Nous contacter</a>
     </p>              
             </div><!-- /col -->
           </div><!-- /col -->
@@ -458,7 +458,7 @@
             <strong class="d-inline me-2">Téléhone:</strong> +596 596 52 60 02
           </p>
           <p class="mb-1">
-            <strong class="d-inline me-2">Mobile:</strong> +596 696 52 60 02
+            <strong class="d-inline me-2">Mobile:</strong> +596 696 52 08 62
           </p>
           <p>
             <strong class="d-inline me-2">Site Web:</strong>
