--- a/terms.html
+++ b/terms.html
@@ -102,9 +102,7 @@
           </ul>
 
           <div class="ms-4">
-            <a
-              href="login.html"
-              class="btn custom-btn custom-border-btn smoothscroll"
+            <a href="login.html" class="btn custom-btn custom-border-btn"
               >Espace pro</a
             >
           </div>
@@ -239,7 +237,7 @@
             </p>
             <br />
             <p>
-              <a href="contact.html" class="btn custom-btn smoothscroll mt-1"
+              <a href="contact.html" class="btn custom-btn mt-1"
                 >Nous contacter</a
               >
             </p>
@@ -380,7 +378,7 @@
               <strong class="d-inline me-2">Téléhone:</strong> +596 596 52 60 02
             </p>
             <p class="mb-1">
-              <strong class="d-inline me-2">Mobile:</strong> +596 696 52 60 02
+              <strong class="d-inline me-2">Mobile:</strong> +596 696 52 08 62
             </p>
             <p>
               <strong class="d-inline me-2">Site Web:</strong>
