--- a/dashboard.html
+++ b/dashboard.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <!-- Balise pour le favicon -->
     <link rel="icon" type="image/png" href="assets/images/logos/amp.jpg">
-    <title>Espace Membre</title>
+    <title>Espace Admin</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -55,9 +55,9 @@
               <li class="nav-item">
                 <a class="nav-link" href="contact.html">Contact</a>
               </li>
-              <li class="nav-item ms-5">
-                <a class="btn custom-btn custom-border-btn" href="logout.html" >Se déconnecter</a>
-              </li> 
+              <li class="nav-item">
+                <a class="btn custom-btn custom-border-btn" href="logout.html" id="logoutButton">Se déconnecter</a>
+              </li>              
             </ul>
           </div>
         </div>
@@ -71,7 +71,7 @@
               <div class="text-center pt-5 pb-2 text-container">
                 <h2 class="animated1">
                   <span
-                    >Notre espace réservé aux membres professionnels<br />
+                    >L'interface d'administration<br />
                     <strong>arrive bientôt</strong></span
                   >
                 </h2>
