--- a/actualites.html
+++ b/actualites.html
@@ -113,7 +113,7 @@
       </nav>
 
       <!--Section Banniere avec differentes captures-->
-      <section class="banniere2">
+      <section class="banniere2" id="section_produits">
         <div class="container">
           <div class="row">
             <div class="col-lg-12 col-12">
@@ -386,7 +386,9 @@
                 pêche durable ! Nous sommes vivement intéressés par vos idées
                 d'amélioration."
               </p>
-              <a href="contact.html" class="btn custom-btn mt-3">Contact</a>
+              <a href="#section_produits" class="btn custom-btn smoothscroll mt-3"
+                >Nos produits selon saison</a
+              >
             </div>
           </div>
           <!-- /.row -->
