--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
       </nav>
 
       <!--Section Banniere-->
-      <section class="banniere">
+      <section class="banniere" id="section_types">
         <div class="container">
           <div class="row">
             <div class="col-lg-12 col-12">
@@ -285,8 +285,8 @@
                 pouvons faire une différence. Vos suggestions d'améliorations
                 nous interessent."
               </p>
-              <a href="contact.html" class="btn custom-btn  mt-3"
-                >Contact</a
+              <a href="#section_types" class="btn custom-btn smoothscroll mt-3"
+                >Nos types de pêche</a
               >
             </div>
           </div>
