--- a/services.html
+++ b/services.html
@@ -82,7 +82,7 @@
         </nav>
 
         <!-- Section BANNIERE -->
-        <section class="banniere3">
+        <section class="banniere3" id="section_services">
             <div class="container">
                 <div class="row">
 
@@ -241,7 +241,9 @@
                 <div class="row">
                     <div class="col-md-12">
                         <p class="text-white-on-black">"Vers un avenir marin meilleur.""</p>
-                        <a href="contact.html" class="btn custom-btn  mt-3">Contact</a>
+                        <a href="#section_services" class="btn custom-btn smoothscroll mt-3"
+                >Nos prestations en images</a
+              >
                     </div>
                 </div><!-- /.row -->
             </div>
