--- a/login.html
+++ b/login.html
@@ -1,81 +1,72 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta
-      name="description"
-      content="Découvrez nos services de pêche professionnelle de haute qualité tout en soutenant la préservation des ressources marines et la vie communautaire des marins pêcheurs professionnels. Nous nous engageons à pratiquer une pêche durable et responsable pour garantir un avenir durable pour notre environnement marin et nos communautés de pêcheurs."
-    />
-    <meta name="author" content="amp" />
-    <!-- Balise pour le favicon -->
-    <link rel="icon" type="image/png" href="assets/images/logos/amp.jpg" />
 
-    <title>AMP - login</title>
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta name="description"
+    content="Découvrez nos services de pêche professionnelle de haute qualité tout en soutenant la préservation des ressources marines et la vie communautaire des marins pêcheurs professionnels. Nous nous engageons à pratiquer une pêche durable et responsable pour garantir un avenir durable pour notre environnement marin et nos communautés de pêcheurs." />
+  <meta name="author" content="amp" />
+  <!-- Balise pour le favicon -->
+  <link rel="icon" type="image/png" href="assets/images/logos/amp.jpg" />
 
-    <!-- Fichiers CSS -->
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link rel="stylesheet" href="assets/css/bootstrap.min.css" />
-    <link rel="stylesheet" href="assets/css/bootstrap-icons.css" />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400&family=Sono:wght@200;300;400;500;700&display=swap"
-      rel="stylesheet"
-    />
+  <title>AMP - login</title>
 
-    <link href="assets/css/login.css" rel="stylesheet" />
-  </head>
+  <!-- Fichiers CSS -->
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link rel="stylesheet" href="assets/css/bootstrap.min.css" />
+  <link rel="stylesheet" href="assets/css/bootstrap-icons.css" />
+  <link
+    href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400&family=Sono:wght@200;300;400;500;700&display=swap"
+    rel="stylesheet" />
 
-  <body>
-    <div class="container">
-      <div class="login-box">
-        <form action="">
-          <div class="page-box">
-            <div class="login-title">
-              <a href="index.html"
-                ><img
-                  src="assets/images/logos/logo1.png"
-                  alt="Logo de l'association"
-                  class="logoAmp"
-              /></a>
+  <link href="assets/css/login.css" rel="stylesheet" />
+</head>
 
-              <h2 class="loginTitle-text">Connexion</h2>
-              <p class="user-email">Connectez-vous sur notre plateforme</p>
+<body>
+  <div class="container">
+    <div class="login-box">
+      <form action="">
+        <div class="page-box">
+          <div class="login-title">
+            <a href="index.html"><img src="assets/images/logos/logo1.png" alt="Logo de l'association"
+                class="logoAmp" /></a>
+
+            <h2 class="loginTitle-text">Connexion</h2>
+            <p class="user-email">Connectez-vous sur notre plateforme</p>
+          </div>
+
+          <div class="page email-page">
+            <div class="input-box">
+              <input type="text" class="email" autofocus required />
+              <label>Entrez votre email</label>
             </div>
 
-            <div class="page email-page">
-              <div class="input-box">
-                <input type="text" class="email" autofocus required />
-                <label>Entrez votre email</label>
-              </div>
+            <div class="input-box">
+              <input type="password" class="password" id="passLog" required />
+              <img src="assets/images/logos/redEye.png" id="eyepassLog" onClick="changer('passLog')" />
+              <label for="password">Mot de passe</label>
+            </div>
 
-              <div class="input-box">
-                <input type="password" class="password" id="passLog" required />
-                <img
-                  src="assets/images/logos/redEye.png"
-                  id="eyepassLog"
-                  onClick="changer('passLog')"
-                />
-                <label for="password">Mot de passe</label>
-              </div>
+            <div class="log-link">
+              <a href="reset.html">Mot de passe oublié</a>
+            </div>
 
-              <div class="log-link">
-                <a href="reset.html">Mot de passe oublié</a>
-              </div>
-
-              <div class="btn-box">
-                <a href="new.html">Creer un compte</a>
-                <button class="btn-next">Se connecter</button>
-              </div>
+            <div class="btn-box">
+              <a href="new.html">Creer un compte</a>
+              <button class="btn-next">Se connecter</button>
             </div>
           </div>
-        </form>
-      </div>
+        </div>
+      </form>
     </div>
-    <script src="assets/js/jquery.min.js"></script>
-    <script src="assets/js/bootstrap.bundle.min.js"></script>
-    <script src="assets/js/owl.carousel.min.js"></script>
-    <script src="assets/js/prefixfree.min.js"></script>
-    <script src="assets/js/script.js"></script>
-  </body>
+  </div>
+  <script src="assets/js/jquery.min.js"></script>
+  <script src="assets/js/bootstrap.bundle.min.js"></script>
+  <script src="assets/js/owl.carousel.min.js"></script>
+  <script src="assets/js/prefixfree.min.js"></script>
+  <script src="assets/js/script.js"></script>
+</body>
+
 </html>
