--- a/logout.html
+++ b/logout.html
@@ -1,54 +1,49 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta
-      name="description"
-      content="Découvrez nos services de pêche professionnelle de haute qualité tout en soutenant la préservation des ressources marines et la vie communautaire des marins pêcheurs professionnels. Nous nous engageons à pratiquer une pêche durable et responsable pour garantir un avenir durable pour notre environnement marin et nos communautés de pêcheurs."
-    />
-    <meta name="author" content="amp" />
-    <!-- Balise pour le favicon -->
-    <link rel="icon" type="image/png" href="assets/images/logos/amp.jpg" />
 
-    <title>AMP - logout</title>
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta name="description"
+    content="Découvrez nos services de pêche professionnelle de haute qualité tout en soutenant la préservation des ressources marines et la vie communautaire des marins pêcheurs professionnels. Nous nous engageons à pratiquer une pêche durable et responsable pour garantir un avenir durable pour notre environnement marin et nos communautés de pêcheurs." />
+  <meta name="author" content="amp" />
+  <!-- Balise pour le favicon -->
+  <link rel="icon" type="image/png" href="assets/images/logos/amp.jpg" />
 
-    <!-- Fichiers CSS -->
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link rel="stylesheet" href="assets/css/bootstrap.min.css" />
-    <link rel="stylesheet" href="assets/css/bootstrap-icons.css" />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400&family=Sono:wght@200;300;400;500;700&display=swap"
-      rel="stylesheet"
-    />
+  <title>AMP - logout</title>
 
-    <link href="assets/css/login.css" rel="stylesheet" />
-  </head>
+  <!-- Fichiers CSS -->
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link rel="stylesheet" href="assets/css/bootstrap.min.css" />
+  <link rel="stylesheet" href="assets/css/bootstrap-icons.css" />
+  <link
+    href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400&family=Sono:wght@200;300;400;500;700&display=swap"
+    rel="stylesheet" />
 
-  <body>
-    <div class="container">
-      <div class="login-box">
-        <form action="">
-          <div class="page-box">
-            <div class="login-title">
-              <a href="index.html"
-                ><img
-                  src="assets/images/logos/logo1.png"
-                  alt="Logo de l'association"
-                  class="logoAmp"
-              /></a>
+  <link href="assets/css/login.css" rel="stylesheet" />
+</head>
 
-              <h2 class="loginTitle-text">Vous avez été déconnecté(e)</h2>
-            </div>           
+<body>
+  <div class="container">
+    <div class="login-box">
+      <form action="">
+        <div class="page-box">
+          <div class="login-title">
+            <a href="index.html"><img src="assets/images/logos/logo1.png" alt="Logo de l'association"
+                class="logoAmp" /></a>
+
+            <h2 class="loginTitle-text">Vous avez été déconnecté(e)</h2>
           </div>
-        </form>
-      </div>
+        </div>
+      </form>
     </div>
-    <script src="assets/js/jquery.min.js"></script>
-    <script src="assets/js/bootstrap.bundle.min.js"></script>
-    <script src="assets/js/owl.carousel.min.js"></script>
-    <script src="assets/js/prefixfree.min.js"></script>
-    <script src="assets/js/script.js"></script>
-  </body>
+  </div>
+  <script src="assets/js/jquery.min.js"></script>
+  <script src="assets/js/bootstrap.bundle.min.js"></script>
+  <script src="assets/js/owl.carousel.min.js"></script>
+  <script src="assets/js/prefixfree.min.js"></script>
+  <script src="assets/js/script.js"></script>
+</body>
+
 </html>
