--- a/new.html
+++ b/new.html
@@ -1,91 +1,73 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta
-      name="description"
-      content="Découvrez nos services de pêche professionnelle de haute qualité tout en soutenant la préservation des ressources marines et la vie communautaire des marins pêcheurs professionnels. Nous nous engageons à pratiquer une pêche durable et responsable pour garantir un avenir durable pour notre environnement marin et nos communautés de pêcheurs."
-    />
-    <meta name="author" content="amp" />
-    <!-- Balise pour le favicon -->
-    <link rel="icon" type="image/png" href="assets/images/logos/amp.jpg" />
 
-    <title>AMP - login</title>
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta name="description"
+    content="Découvrez nos services de pêche professionnelle de haute qualité tout en soutenant la préservation des ressources marines et la vie communautaire des marins pêcheurs professionnels. Nous nous engageons à pratiquer une pêche durable et responsable pour garantir un avenir durable pour notre environnement marin et nos communautés de pêcheurs." />
+  <meta name="author" content="amp" />
+  <!-- Balise pour le favicon -->
+  <link rel="icon" type="image/png" href="assets/images/logos/amp.jpg" />
 
-    <!-- Fichiers CSS -->
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400&family=Sono:wght@200;300;400;500;700&display=swap"
-      rel="stylesheet"
-    />
+  <title>AMP - login</title>
 
-    <link href="assets/css/login.css" rel="stylesheet" />
-  </head>
+  <!-- Fichiers CSS -->
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link
+    href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400&family=Sono:wght@200;300;400;500;700&display=swap"
+    rel="stylesheet" />
 
-  <body>
-    <div class="container">
-      <div class="login-box">
-        <form method="post" action="new_page.html">
-          <div class="page-box">
-            <div class="login-title">
-              <a href="index.html"
-                ><img
-                  src="assets/images/logos/logo1.png"
-                  alt="Logo de l'association"
-                  class="logoAmp"
-              /></a>
-              <h2 class="loginTitle-text">Création de Compte</h2>
-              <p class="user-email">Inscrivez-vous sur notre plateforme</p>
+  <link href="assets/css/login.css" rel="stylesheet" />
+</head>
+
+<body>
+  <div class="container">
+    <div class="login-box">
+      <form method="post" action="new_page.html">
+        <div class="page-box">
+          <div class="login-title">
+            <a href="index.html"><img src="assets/images/logos/logo1.png" alt="Logo de l'association"
+                class="logoAmp" /></a>
+            <h2 class="loginTitle-text">Création de Compte</h2>
+            <p class="user-email">Inscrivez-vous sur notre plateforme</p>
+          </div>
+
+          <div class="page new-page">
+            <div class="input-box">
+              <input type="text" class="name" autofocus required />
+              <label>Nom complet</label>
             </div>
 
-            <div class="page new-page">
-              <div class="input-box">
-                <input type="text" class="name" autofocus required />
-                <label>Nom complet</label>
-              </div>
+            <div class="input-box">
+              <input type="email" class="email" required />
+              <label>Adresse e-mail</label>
+            </div>
 
-              <div class="input-box">
-                <input type="email" class="email" required />
-                <label>Adresse e-mail</label>
-              </div>
+            <div class="input-box">
+              <input type="password" id="pass" class="password" required />
+              <img src="assets/images/logos/redEye.png" id="eyepass" onClick="changer('pass')" />
+              <label>Mot de passe</label>
+            </div>
 
-              <div class="input-box">
-                <input type="password" id="pass" class="password" required />
-                <img
-                  src="assets/images/logos/redEye.png"
-                  id="eyepass"
-                  onClick="changer('pass')"
-                />
-                <label>Mot de passe</label>
-              </div>
+            <div class="input-box">
+              <input type="password" id="confirmPass" class="confirm-password" required />
+              <img src="assets/images/logos/redEye.png" id="eyeconfirmPass" onClick="changer('confirmPass')" />
+              <label>Confirmez le mot de passe</label>
+            </div>
 
-              <div class="input-box">
-                <input
-                  type="password"
-                  id="confirmPass"
-                  class="confirm-password"
-                  required
-                />
-                <img
-                  src="assets/images/logos/redEye.png"
-                  id="eyeconfirmPass"
-                  onClick="changer('confirmPass')"
-                />
-                <label>Confirmez le mot de passe</label>
-              </div>
-
-              <div class="btn-box">
-                <a href="login.html">Se connecter</a>
-                <button class="btn-next">Créer un compte</button>
-              </div>
+            <div class="btn-box">
+              <a href="login.html">Se connecter</a>
+              <button class="btn-next">Créer un compte</button>
             </div>
           </div>
-        </form>
-      </div>
+        </div>
+      </form>
     </div>
+  </div>
 
-    <script src="assets/js/script.js"></script>
-  </body>
+  <script src="assets/js/script.js"></script>
+</body>
+
 </html>
