--- a/actions.html
+++ b/actions.html
@@ -230,7 +230,7 @@
     </section>
 
     <!--Section parallax Appel a l'action-->
-    <section class="appel-action">
+    <section class="appel-action6">
       <div class="container">
         <div class="row">
           <div class="col-md-12">
