--- a/a-propos.html
+++ b/a-propos.html
@@ -84,7 +84,7 @@
     </nav>
 
     <!--Section Banniere-->
-    <section class="banniere4">
+    <section class="banniere1">
       <div class="container">
         <div class="row">
 
@@ -263,7 +263,7 @@
 
                 </h4><br>
 
-                <div class="profile-block d-flex">
+                <div class="large-block d-flex">
                   <p class="mb-0"><strong class="mission-value"> Notre Mission </strong><br> Notre mission est de
                     promouvoir la pêche durable, la préservation des ressources marines et la vie communautaire des
                     marins pêcheurs professionnels. Nous nous efforçons de sensibiliser à l'importance de pratiques de
