--- a/contact.html
+++ b/contact.html
@@ -86,7 +86,7 @@
     </nav>
 
     <!--Section Banniere-->
-    <section class="banniere6">
+    <section class="banniere7">
       <div class="container">
         <div class="row">
           <div class="col-lg-12 col-12">
@@ -126,7 +126,7 @@
                   </a>
                 </h5>
 
-                <div class="profile-block d-flex">
+                <div class="large-block d-flex">
                   <p class="mb-0">
                     Nous tenons à exprimer notre sincère gratitude pour avoir
                     pris le temps de visiter notre site web. Votre intérêt et
