--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
                     <a href="actions.html"> Chers internautes </a>
                   </h5>
 
-                  <div class="profile-block d-flex">
+                  <div class="large-block d-flex">
                     <p class="mb-1">
                       Nous sommes ravis de vous accueillir sur notre plateforme
                       dédiée à la communauté des marins pêcheurs professionnels
