--- a/index.html
+++ b/index.html
@@ -210,136 +210,139 @@
     </section>
 
     <!--Section Derniere Actu  / meteo / info pratique-->
-    <section class="bloc2-section section-padding">
-      <div class="container">
-        <div class="row">
-          <div class="col-lg-12 col-12">
-            <div class="section-title-wrap mb-3">
-              <h4 class="section-title">Derniere actualite / info</h4>
-            </div>
-          </div>
-
-          <div class="row align-items-stretch">
-            <!--derniere actu-->
-            <div class="col-lg-7 col-12 mb-4 mb-lg-0">
-              <div class="custom-block custom-block-full">
-                <div class="custom-block-image-wrap">
-                  <a href="assets/images/activites/2.jpg" class="custom-block-image-wrap" target="_blank">
-                    <img src="assets/images/activites/2.jpg" class="custom-block-image img-fluid" alt="reunion" />
-                  </a>
-                </div>
-                <div class="custom-block-info">
-                  <h5 class="mb-2">
-                    Réunion sur la segmentation de la pêche
-                  </h5>
-
-                  <p class="mb-0">Lorem Ipsum dolor sit amet consectetur</p>
-
-                  <div class="custom-block-bottom d-flex justify-content-between mt-3">
-                    <a href="#" class="bi-eye-fill me-1">
-                      <span>100k</span>
-                    </a>
-
-                    <a href="#" class="bi-heart me-1">
-                      <span>2.5k</span>
-                    </a>
-                  </div>
-
-                  <div class="social-share d-flex flex-column ms-auto">
-                    <a href="#" class="badge ms-auto">
-                      <i class="bi-heart"></i>
-                    </a>
-                  </div>
-                </div>
+    <div id="admin-editable-section">
+      <section class="bloc2-section section-padding">
+        <div class="container">
+          <div class="row">
+            <div class="col-lg-12 col-12">
+              <div class="section-title-wrap mb-3">
+                <h4 class="section-title">Derniere actualite / info</h4>
               </div>
             </div>
-            <!--Coin meteo-->
-            <div class="col-lg-5 col-12 mb-4 mb-lg-0">
-              <div class="row">
-                <div class="col-lg-12 col-12">
-                  <div class="custom-block custom-block-full">
-                    <div class="custom-block-image-wrap">
-                      <a href="https://meteofrance.mq/fr" target="_blank">
-                        <img src="assets/images/meteo.png" class="custom-block-image img-fluid" alt="meteo" />
+
+            <div class="row align-items-stretch">
+              <!--derniere actu-->
+              <div class="col-lg-7 col-12 mb-4 mb-lg-0">
+                <div class="custom-block custom-block-full">
+                  <div class="custom-block-image-wrap">
+                    <a href="assets/images/activites/2.jpg" class="custom-block-image-wrap" target="_blank">
+                      <img src="assets/images/activites/2.jpg" class="custom-block-image img-fluid" alt="reunion" />
+                    </a>
+                  </div>
+                  <div class="custom-block-info">
+                    <h5 class="mb-2">
+                      Réunion sur la segmentation de la pêche
+                    </h5>
+
+                    <p class="mb-0">Lorem Ipsum dolor sit amet consectetur</p>
+
+                    <div class="custom-block-bottom d-flex justify-content-between mt-3">
+                      <a href="#" class="bi-eye-fill me-1">
+                        <span>100k</span>
+                      </a>
+
+                      <a href="#" class="bi-heart me-1">
+                        <span>2.5k</span>
                       </a>
                     </div>
 
-                    <div class="custom-block-info">
-                      <h5 class="mb-2">Coin météo</h5>
+                    <div class="social-share d-flex flex-column ms-auto">
+                      <a href="#" class="badge ms-auto">
+                        <i class="bi-heart"></i>
+                      </a>
                     </div>
                   </div>
                 </div>
               </div>
-              <!-- / .row  -->
+              <!--Coin meteo-->
+              <div class="col-lg-5 col-12 mb-4 mb-lg-0">
+                <div class="row">
+                  <div class="col-lg-12 col-12">
+                    <div class="custom-block custom-block-full">
+                      <div class="custom-block-image-wrap">
+                        <a href="https://meteofrance.mq/fr" target="_blank">
+                          <img src="assets/images/meteo.png" class="custom-block-image img-fluid" alt="meteo" />
+                        </a>
+                      </div>
+
+                      <div class="custom-block-info">
+                        <h5 class="mb-2">Coin météo</h5>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+                <!-- / .row  -->
+              </div>
+            </div>
+            <!-- / .row  -->
+          </div>
+          <!-- / .row  -->
+
+          <!--INFO PRATIQUE-->
+          <div class="row">
+            <div class="col-lg-12 col-12 mt-4">
+              <div class="custom-block text-center custom-block-full">
+                <div class="custom-block-info">
+                  <h5 class="mb-2">Info pratique</h5>
+                </div>
+                <div class="custom-block-image-wrap align-items-center">
+                  <div id="content">
+                    <ul id="flip" class="pratiques">
+                      <li class="image-spacing">
+                        <img class="pic" src="assets/images/infos/armateur.jpg" alt="armateur" />
+                        <ul class="info pt-5">
+                          <li class="image-spacing">
+                            <a href="https://authentification.din.developpement-durable.gouv.fr/authSAML/connexion.do?backURL=https%3A%2F%2Fportail-armateur.din.developpement-durable.gouv.fr%2Fpda-site-api%2Fv1%2Fcerbere%2Fconnecte&v=4.7.2&appId=613"
+                              target="_blank">Portail<br />Armateur</a>
+                          </li>
+                        </ul>
+                      </li>
+                      <li class="image-spacing">
+                        <img class="pic" src="assets/images/infos/marin.jpg" alt="marin" />
+                        <ul class="info pt-5">
+                          <li>
+                            <a href="https://authentification.din.developpement-durable.gouv.fr/authSAML/login/LoginDispatchAction.do?backURL=https%3A%2F%2Fportail-du-marin.din.developpement-durable.gouv.fr%2Fpmr-site%2Fauthentification.html&v=4.2.2&appId=566"
+                              target="_blank">Portail<br />Marin</a>
+                          </li>
+                        </ul>
+                      </li>
+                      <li class="image-spacing">
+                        <img class="pic" src="assets/images/infos/urssaf.jpg" alt="urssaf" />
+                        <ul class="info pt-5">
+                          <li>
+                            <a href="https://mon.urssaf.fr/marins/connexion.html" target="_blank">Compte<br />Urssaf</a>
+                          </li>
+                        </ul>
+                      </li>
+                      <li class="image-spacing">
+                        <img class="pic" src="assets/images/infos/formation.jpg" alt="cpf" />
+                        <ul class="info pt-5">
+                          <li>
+                            <a href="https://www.moncompteformation.gouv.fr/espace-prive/html/#/compte-utilisateur/connexion"
+                              target="_blank">Compte<br />formation</a>
+                          </li>
+                        </ul>
+                      </li>
+                      <li class="image-spacing">
+                        <img class="pic" src="assets/images/infos/ssgm.jpg" alt="medical" />
+                        <ul class="info pt-5">
+                          <li>
+                            <a href="http://rdvsantemarin.application.equipement.gouv.fr/agendassgm/index.jsp"
+                              target="_blank">RV medical</a>
+                          </li>
+                        </ul>
+                      </li>
+                    </ul>
+                  </div>
+                </div>
+              </div>
             </div>
           </div>
           <!-- / .row  -->
         </div>
-        <!-- / .row  -->
+      </section>
 
-        <!--INFO PRATIQUE-->
-        <div class="row">
-          <div class="col-lg-12 col-12 mt-4">
-            <div class="custom-block text-center custom-block-full">
-              <div class="custom-block-info">
-                <h5 class="mb-2">Info pratique</h5>
-              </div>
-              <div class="custom-block-image-wrap align-items-center">
-                <div id="content">
-                  <ul id="flip" class="pratiques">
-                    <li class="image-spacing">
-                      <img class="pic" src="assets/images/infos/armateur.jpg" alt="armateur" />
-                      <ul class="info pt-5">
-                        <li class="image-spacing">
-                          <a href="https://authentification.din.developpement-durable.gouv.fr/authSAML/connexion.do?backURL=https%3A%2F%2Fportail-armateur.din.developpement-durable.gouv.fr%2Fpda-site-api%2Fv1%2Fcerbere%2Fconnecte&v=4.7.2&appId=613"
-                            target="_blank">Portail<br />Armateur</a>
-                        </li>
-                      </ul>
-                    </li>
-                    <li class="image-spacing">
-                      <img class="pic" src="assets/images/infos/marin.jpg" alt="marin" />
-                      <ul class="info pt-5">
-                        <li>
-                          <a href="https://authentification.din.developpement-durable.gouv.fr/authSAML/login/LoginDispatchAction.do?backURL=https%3A%2F%2Fportail-du-marin.din.developpement-durable.gouv.fr%2Fpmr-site%2Fauthentification.html&v=4.2.2&appId=566"
-                            target="_blank">Portail<br />Marin</a>
-                        </li>
-                      </ul>
-                    </li>
-                    <li class="image-spacing">
-                      <img class="pic" src="assets/images/infos/urssaf.jpg" alt="urssaf" />
-                      <ul class="info pt-5">
-                        <li>
-                          <a href="https://mon.urssaf.fr/marins/connexion.html" target="_blank">Compte<br />Urssaf</a>
-                        </li>
-                      </ul>
-                    </li>
-                    <li class="image-spacing">
-                      <img class="pic" src="assets/images/infos/formation.jpg" alt="cpf" />
-                      <ul class="info pt-5">
-                        <li>
-                          <a href="https://www.moncompteformation.gouv.fr/espace-prive/html/#/compte-utilisateur/connexion"
-                            target="_blank">Compte<br />formation</a>
-                        </li>
-                      </ul>
-                    </li>
-                    <li class="image-spacing">
-                      <img class="pic" src="assets/images/infos/ssgm.jpg" alt="medical" />
-                      <ul class="info pt-5">
-                        <li>
-                          <a href="http://rdvsantemarin.application.equipement.gouv.fr/agendassgm/index.jsp"
-                            target="_blank">RV medical</a>
-                        </li>
-                      </ul>
-                    </li>
-                  </ul>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-        <!-- / .row  -->
-      </div>
-    </section>
+    </div>
   </main>
 
   <!-- TOP -->
@@ -416,7 +419,7 @@
             <strong class="d-inline me-2">Téléhone:</strong> +596 596 52 60 02
           </p>
           <p class="mb-1">
-            <strong class="d-inline me-2">Mobile:</strong> +596 696 52 08 62
+            <strong class="d-inline me-2">Mobile:</strong> +596 596 52 60 02
           </p>
           <p>
             <strong class="d-inline me-2">Site Web:</strong>
@@ -487,6 +490,20 @@
   <script src="assets/js/owl.carousel.min.js"></script>
   <script src="assets/js/prefixfree.min.js"></script>
   <script src="assets/js/script.js"></script>
+
+  <script>
+    // Récupérez l'ancre (fragment) de l'URL.
+    const sectionAnchor = window.location.hash;
+
+    // Vérifiez s'il s'agit de l'ancre de la section modifiable.
+    if (sectionAnchor === '#admin-editable-section') {
+      // Affichez la section modifiable.
+      document.getElementById('admin-editable-section').style.display = 'block';
+    }
+
+  </script>
+
+
 </body>
 
 </html>
