--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
               </p>
             </div>
 
-            <!--Defilement images-->
+            <!--Defilement carousel d'images-->
             <div class="owl-carousel owl-theme custom-carousel mt-0">
               <div class="owl-carousel-info-wrap item">
                 <a href="assets/images/materiels/8.jpg" class="custom-block-image-wrap" target="_blank">
