--- a/index.html
+++ b/index.html
@@ -202,7 +202,9 @@
               pouvons faire une différence. Vos suggestions d'améliorations
               nous interessent."
             </p>
-            <a href="#section_types" class="btn custom-btn smoothscroll mt-3">Nos types de pêche</a>
+            <a href="#section_types" 
+            class="btn custom-btn smoothscroll mt-3">Nos types de pêche</a>
+            
           </div>
         </div>
         <!-- /.row -->
