--- a/login.html
+++ b/login.html
@@ -50,13 +50,12 @@
             </div>
 
             <div class="log-link">
-              <a href="reset.html">Mot de passe oublié</a>
+              <a href="recup.html">Mot de passe oublié</a>
             </div>
 
-            <div class="btn-box">
-              <a href="new.html">Creer un compte</a>
+            <div class="btn-box" style="text-align: right;">              
               <button class="btn-next">Se connecter</button>
-            </div>
+          </div>
           </div>
         </div>
       </form>
